--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@3.3.10/dist/vuetify.min.css"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@3.3.10/dist/vuetify.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vuetify@3.3.10/dist/vuetify.min.css">
+    <script type="text/JavaScript" src="https://cdn.jsdelivr.net/npm/vuetify@3.3.10/dist/vuetify.min.js"></script>
   </head>
   <body>
     <noscript>
